fix scrollbar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -11,7 +11,7 @@
 
         }
         .admin-main{
-
+            height: calc(100vh - 50px);
         }
     }
 }
