--- a/src/components/Admin/Content/Quiz/ManageQuiz.scss
+++ b/src/components/Admin/Content/Quiz/ManageQuiz.scss
@@ -1,9 +1,13 @@
 .quiz-container{
-    padding: 15px;
+
     .quiz-title{
         font-size: 27px;
     }
 }
 legend{
     font-size: 15px;
+}
+.list-detail{
+    // margin-bottom: 30px;
+    padding: 15px;
 }
